--- a/src/index.html
+++ b/src/index.html
@@ -42,6 +42,52 @@
     </nav>
 
     <main id="main-content">
+        <div id="not-found" class="page">
+            <section class="auth-section">
+                <div class="container">
+                    <div class="auth-content" style="text-align: center; display: block;">
+                        <div class="auth-mascot" style="margin-bottom: 2rem;">
+                            <div class="cat-mascot">
+                                <div class="cat-body">
+                                    <div class="cat-face">
+                                        <div class="cat-eyes">
+                                            <div class="eye left-eye" style="height: 2px; border-radius: 0;"></div>
+                                            <div class="eye right-eye" style="height: 2px; border-radius: 0;"></div>
+                                        </div>
+                                        <div class="cat-nose"></div>
+                                        <div class="cat-mouth">
+                                            <div class="mouth-left" style="transform: rotate(15deg);"></div>
+                                            <div class="mouth-right" style="transform: rotate(-15deg);"></div>
+                                        </div>
+                                    </div>
+                                    <div class="cat-ears">
+                                        <div class="ear ear-left" style="transform: rotate(-20deg);"></div>
+                                        <div class="ear ear-right" style="transform: rotate(20deg);"></div>
+                                    </div>
+                                    <div class="cat-hoodie"></div>
+                                </div>
+                            </div>
+                            <div class="speech-bubble">
+                                <span class="speech-text">Wait, where are we?</span>
+                            </div>
+                        </div>
+                        
+                        <h1 style="font-family: var(--font-primary); font-size: 4rem; color: var(--primary-color); margin-bottom: 1rem;">404</h1>
+                        <h2 style="color: var(--text-primary); margin-bottom: 1rem;">Page Not Found</h2>
+                        <p style="color: var(--text-secondary); margin-bottom: 2rem; font-size: 1.1rem;">
+                            The page you are looking for seems to have vanished into the digital void.<br>
+                            Or maybe the cat ate it.
+                        </p>
+                        
+                        <button class="btn btn-primary" onclick="showPage('home'); window.location.hash='home';">
+                            <i class="fas fa-home"></i>
+                            Return Home
+                        </button>
+                    </div>
+                </div>
+            </section>
+        </div>
+
         <div id="home" class="page active">
             <section class="hero">
                 <div class="container">
@@ -423,7 +469,7 @@
                                     <div class="form-grid">
                                         <div class="form-group">
                                             <label>Full Name</label>
-                                            <input type="text" name="full_name" value="" disabled>
+                                            <input type="text" name="full_name" value="" maxlength="30" disabled>
                                         </div>
                                         <div class="form-group">
                                             <label>Email Address</label>
@@ -549,11 +595,11 @@
                                 </div>
                                 <div class="form-options">
                                     <label class="checkbox">
-                                        <input type="checkbox">
+                                        <input type="checkbox" name="rememberMe">
                                         <span class="checkmark"></span>
                                         Remember me
                                     </label>
-                                    <a href="#" class="forgot-password">Forgot password?</a>
+                                    <a href="#not-found" class="forgot-password" onclick="showPage('not-found')">Forgot password?</a>
                                 </div>
                                 <button type="submit" class="btn btn-primary btn-full">
                                     <i class="fas fa-sign-in-alt"></i>
@@ -607,7 +653,7 @@
                             <form id="signup-form">
                                 <div class="form-group">
                                     <label>Full Name</label>
-                                    <input type="text" name="fullName" placeholder="Enter your full name" required>
+                                    <input type="text" name="fullName" placeholder="Enter your full name" maxlength="30" required>
                                 </div>
                                 <div class="form-group">
                                     <label>Email Address</label>
@@ -615,7 +661,7 @@
                                 </div>
                                 <div class="form-group">
                                     <label>Username</label>
-                                    <input type="text" name="username" placeholder="Choose a username" required>
+                                    <input type="text" name="username" placeholder="Choose a username" maxlength="30" required>
                                 </div>
                                 <div class="form-group">
                                     <label>Password</label>
@@ -642,10 +688,22 @@
                                     </div>
                                 </div>
                                 <div class="form-options">
+                                    <div id="policyModal" class="modal">
+                                        <div class="modal-content" style="max-width: 700px;">
+                                            <div class="modal-header">
+                                                <h2 id="policyModalTitle">Terms of Service</h2>
+                                                <span class="modal-close" id="closePolicyModal">&times;</span>
+                                            </div>
+                                            <div class="modal-body" id="policyModalBody" style="max-height: 60vh; overflow-y: auto; padding: 1rem; line-height: 1.6;">
+                                                <!-- Content will be injected here -->
+                                            </div>
+                                        </div>
+                                    </div>
+
                                     <label class="checkbox">
                                         <input type="checkbox" required>
                                         <span class="checkmark"></span>
-                                        I agree to the <a href="#">Terms of Service</a> and <a href="#">Privacy Policy</a>
+                                        I agree to the <a href="#" class="policy-link" data-type="tos">Terms of Service</a> and <a href="#" class="policy-link" data-type="privacy">Privacy Policy</a>
                                     </label>
                                 </div>
                                 <button type="submit" class="btn btn-primary btn-full">
@@ -934,6 +992,6 @@
         </div>
     </div>
 
-    <script src="assets/js/script.js?v=1.9"></script>
+    <script src="assets/js/script.js?v=2.0"></script>
 </body>
 </html>
