--- a/src/index.html
+++ b/src/index.html
@@ -5,11 +5,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' 'unsafe-inline' https://cdnjs.cloudflare.com; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com https://cdnjs.cloudflare.com; font-src 'self' https://fonts.gstatic.com https://cdnjs.cloudflare.com; img-src 'self' data:; connect-src 'self';">
     <title>Koneko CTF - Capture The Flag Competition</title>
+    <style>
+        :root { --bg-primary: #0a0a0f; --primary-color: #00ffff; --glass-border: rgba(255, 255, 255, 0.1); --text-secondary: #b8b8b8; --font-primary: 'Orbitron', monospace; }
+        #page-loader { position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: var(--bg-primary); z-index: 9999; display: flex; flex-direction: column; justify-content: center; align-items: center; transition: opacity 0.2s ease, visibility 0.2s ease; }
+        #page-loader.hidden { opacity: 0; visibility: hidden; pointer-events: none; }
+        .loader-spinner { width: 50px; height: 50px; border: 3px solid var(--glass-border); border-top-color: var(--primary-color); border-radius: 50%; animation: spin 1s linear infinite; margin-bottom: 1rem; }
+        .loader-text { color: var(--text-secondary); font-family: var(--font-primary); font-size: 1.2rem; letter-spacing: 2px; animation: pulse 1.5s ease-in-out infinite; }
+        @keyframes spin { to { transform: rotate(360deg); } }
+        @keyframes pulse { 0%, 100% { opacity: 0.6; } 50% { opacity: 1; } }
+    </style>
     <link rel="stylesheet" href="assets/css/styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700;900&family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
+    <div id="page-loader">
+        <div class="loader-spinner"></div>
+        <div class="loader-text">INITIALIZING SYSTEM...</div>
+    </div>
     <nav class="navbar">
         <div class="nav-container">
             <div class="nav-brand">
@@ -992,6 +1005,17 @@
         </div>
     </div>
 
-    <script src="assets/js/script.js?v=2.0"></script>
+    <script src="assets/js/script.js?v=2.1"></script>
+    <script>
+        // Failsafe: Ensure loader is removed after 5 seconds even if script.js fails
+        setTimeout(function() {
+            var loader = document.getElementById('page-loader');
+            if (loader && !loader.classList.contains('hidden')) {
+                console.warn('Loader stuck detected. Forcing removal.');
+                loader.style.opacity = '0';
+                setTimeout(function() { loader.remove(); }, 200);
+            }
+        }, 5000);
+    </script>
 </body>
 </html>
